@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.184 2004/04/17 17:26:40 seb Exp $
+# $NetBSD: Makefile,v 1.185 2004/04/24 00:17:20 reed Exp $
 #
 
-DISTNAME=	pkglint-3.72
+DISTNAME=	pkglint-3.73
 CATEGORIES=	pkgtools devel
 MASTER_SITES=	# empty
 DISTFILES=	# empty
